RESOLVED FIXED208302
REGRESSION(r257299): [GTK] Check and radio buttons don't keep the aspect ratio
https://bugs.webkit.org/show_bug.cgi?id=208302
Summary REGRESSION(r257299): [GTK] Check and radio buttons don't keep the aspect ratio
Carlos Garcia Campos
Reported 2020-02-27 06:47:01 PST
When different width and height is used, we should use the lower value and render the button centered.
Attachments
Patch (2.47 KB, patch)
2020-02-27 06:48 PST, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2020-02-27 06:48:26 PST
Carlos Garcia Campos
Comment 2 2020-02-28 01:38:05 PST
Note You need to log in before you can comment on or make changes to this bug.