REGRESSION(r257299): [GTK] Check and radio buttons don't keep the aspect ratio https://bugs.webkit.org/show_bug.cgi?id=208302

Reviewed by Adrian Perez de Castro.

When different width and height is used, we should use the lower value and render the button centered.

* platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::paintCheckbox):
(WebCore::ThemeAdwaita::paintRadio):

Canonical link: https://commits.webkit.org/221299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257630 268f45cc-cd09-0410-ab3c-d52691b4dbfc